--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="widht=device-width, initial-scale=1.0" />
     <title>Home Work 6 AGENCJA</title>
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="css/main.min.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -80,22 +80,22 @@
       <section id="signature" class="boxes">
         <div class="container">
           <ul class="boxes__items">
-            <li class="boxes__items--position">
+            <li class="position-boxes">
               <svg class="" height="120px" ; width="270px">
                 <use href="./images/icons.svg#icon-group-1"></use>
               </svg>
             </li>
-            <li class="boxes__items--position">
+            <li class="position-boxes">
               <svg class="" height="120px" ; width="270px">
                 <use href="./images/icons.svg#icon-group-2"></use>
               </svg>
             </li>
-            <li class="boxes__items--position">
+            <li class="position-boxes">
               <svg class="" height="120px" ; width="270px">
                 <use href="./images/icons.svg#icon-group-3"></use>
               </svg>
             </li>
-            <li class="boxes__items--position">
+            <li class="position-boxes">
               <svg class="" height="120px" ; width="270px">
                 <use href="./images/icons.svg#icon-group-4"></use>
               </svg>
@@ -106,28 +106,28 @@
       <section id="signature">
         <div class="container">
           <ul class="boxes__items">
-            <li class="boxes__items--position">
+            <li class="position-boxes">
               <p class="signature">LOREM IPSUM</p>
               <p class="signature--position">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
                 sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li class="boxes__items--position">
+            <li class="position-boxes">
               <p class="signature">LOREM IPSUM</p>
               <p class="signature--position">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
                 sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li class="boxes__items--position">
+            <li class="position-boxes">
               <p class="signature">LOREM IPSUM</p>
               <p class="signature--position">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
                 sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li class="boxes__items--position">
+            <li class="position-boxes">
               <p class="signature">LOREM IPSUM</p>
               <p class="signature--position">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
@@ -137,19 +137,19 @@
           </ul>
         </div>
       </section>
-      <section id="what-we-do" class="section">
+      <section id="aplication" class="section">
         <div class="container">
           <h3>Czym się zajmujemy</h3>
           <ul class="what-we-do">
-            <li class="what-we-do--position-box">
+            <li class="position-boxes">
               <img src="images/img2.jpg" width="370" height="294" alt="computer" />
               <figcaption class="what-we-do__signature">aplikacje komputerowe</figcaption>
             </li>
-            <li class="what-we-do--position-box">
+            <li class="position-boxes">
               <img src="images/img1.jpg" width="370" height="294" alt="phone" />
               <figcaption class="what-we-do__signature">aplikacje mobilne</figcaption>
             </li>
-            <li class="what-we-do--position-box">
+            <li class="position-boxes">
               <img src="images/img3.jpg" width="370" height="294" alt="tablet" />
               <figcaption class="what-we-do__signature">rozwiązania graficzne</figcaption>
             </li>
