--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <main>
       <div class="wallpaper container">
-        <h1 class="wallpaper__heading box-social">
+        <h1 class="wallpaper__heading">
           EFEKTYWNE ROZWIĄZANIA <br />DLA WASZEGO BIZNESU<br />
         </h1>
         <div class="wallpaper__button">
