--- a/portfolio.html
+++ b/portfolio.html
@@ -5,15 +5,12 @@
     <meta name="viewport" content="widht=device-width, initial-scale=1.0" />
     <title>Home Work 6 PORTFOLIO</title>
     <link href="css/style.css" rel="stylesheet" />
+    <link href="css/modern-normalize.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:ital,wght@0,400;0,500;0,900;1,700&display=swap"
       rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://github.com/sindresorhus/modern-normalize/blob/0c3cb3a7dcf0fb4242a8736127a1d717b704c360/modern-normalize.css"
     />
   </head>
   <body>
