--- a/index.html
+++ b/index.html
@@ -17,29 +17,34 @@
     <!--  -->
     <!-- H E A D E R -->
     <!--  -->
-    <header class="border-bottom">
-      <div class="container flex">
-        <div class="header--center">
+    <header class="header">
+      <div class="header__container container">
+        <div class="header__menu">
           <a href="index.html" class="logo"><span class="logo--color">Web</span>Studio</a>
-          <nav class="header--center">
-            <ul class="menu">
+
+          <nav class="header__menu">
+            <ul class="header__menu__container">
               <li>
                 <a
                   href="index.html"
-                  class="menu__item menu__item--active blue-line-agency"
+                  class="header__menu__item header__menu__item--active header__menu__item--blue-bottom-agency"
                   >Agencja
                 </a>
               </li>
-              <li><a href="portfolio.html" class="menu__item">Portfolio</a></li>
-              <li><a href="/" class="menu__item">Kontakt</a></li>
+              <li><a href="portfolio.html" class="header__menu__item">Portfolio</a></li>
+              <li><a href="/" class="header__menu__item">Kontakt</a></li>
             </ul>
           </nav>
         </div>
-        <div>
-          <ul class="menu flex menu--gap">
+
+        <nav class="header__menu">
+          <ul class="header__menu__container header__menu__container--gap">
             <li>
-              <a href="mailto:info@devstudio.com" class="menu__contact menu--color">
-                <svg class="svg">
+              <a
+                href="mailto:info@devstudio.com"
+                class="header__menu__contact header__menu__contact--color"
+              >
+                <svg class="header__menu__contact__icon-email">
                   <use href="./images/icons.svg#icon-envelope"></use>
                 </svg>
                 <span>info@devstudio.com</span>
@@ -48,18 +53,19 @@
             <li>
               <a
                 href="tel:+48111111111"
-                class="menu__contact menu__contact--padding-tel menu--color"
+                class="header__menu__contact header__menu__contact--color header__menu__contact--padding"
               >
-                <svg class="svg2">
+                <svg class="header__menu__contact__icon-phone">
                   <use href="./images/icons.svg#icon-smartphone"></use>
                 </svg>
                 <span>+48 111 111 111</span>
               </a>
             </li>
           </ul>
-        </div>
+        </nav>
       </div>
     </header>
+
     <main>
       <!--  -->
       <!-- E F F E C T I V E  S O L U T I O N S -->
@@ -185,27 +191,27 @@
                   </figcaption>
                 </figure>
 
-                <div class="social-icon">
-                  <div class="social-icon--circle">
-                    <svg class="size-social-icon">
+                <div class="social-icons-section">
+                  <div class="social-icons-section__unit">
+                    <svg class="social-icons-section__unit__icon">
                       <use href="./images/icons.svg#icon-insta"></use>
                     </svg>
                   </div>
 
-                  <div class="social-icon--circle">
-                    <svg class="size-social-icon">
+                  <div class="social-icons-section__unit">
+                    <svg class="social-icons-section__unit__icon">
                       <use href="./images/icons.svg#icon-tweet"></use>
                     </svg>
                   </div>
 
-                  <div class="social-icon--circle">
-                    <svg class="size-social-icon">
+                  <div class="social-icons-section__unit">
+                    <svg class="social-icons-section__unit__icon">
                       <use href="./images/icons.svg#icon-face"></use>
                     </svg>
                   </div>
 
-                  <div class="social-icon--circle">
-                    <svg class="size-social-icon">
+                  <div class="social-icons-section__unit">
+                    <svg class="social-icons-section__unit__icon">
                       <use href="./images/icons.svg#icon-linke"></use>
                     </svg>
                   </div>
@@ -224,27 +230,27 @@
                     <p class="our-team__person--specialization">Fronted Developer</p>
                   </figcaption>
                 </figure>
-                <div class="social-icon">
-                  <div class="social-icon--circle">
-                    <svg class="size-social-icon">
+                <div class="social-icons-section">
+                  <div class="social-icons-section__unit">
+                    <svg class="social-icons-section__unit__icon">
                       <use href="./images/icons.svg#icon-insta"></use>
                     </svg>
                   </div>
 
-                  <div class="social-icon--circle">
-                    <svg class="size-social-icon">
+                  <div class="social-icons-section__unit">
+                    <svg class="social-icons-section__unit__icon">
                       <use href="./images/icons.svg#icon-tweet"></use>
                     </svg>
                   </div>
 
-                  <div class="social-icon--circle">
-                    <svg class="size-social-icon">
+                  <div class="social-icons-section__unit">
+                    <svg class="social-icons-section__unit__icon">
                       <use href="./images/icons.svg#icon-face"></use>
                     </svg>
                   </div>
 
-                  <div class="social-icon--circle">
-                    <svg class="size-social-icon">
+                  <div class="social-icons-section__unit">
+                    <svg class="social-icons-section__unit__icon">
                       <use href="./images/icons.svg#icon-linke"></use>
                     </svg>
                   </div>
@@ -263,27 +269,27 @@
                     <p class="our-team__person--specialization">Marketing</p>
                   </figcaption>
                 </figure>
-                <div class="social-icon">
-                  <div class="social-icon--circle">
-                    <svg class="size-social-icon">
+                <div class="social-icons-section">
+                  <div class="social-icons-section__unit">
+                    <svg class="social-icons-section__unit__icon">
                       <use href="./images/icons.svg#icon-insta"></use>
                     </svg>
                   </div>
 
-                  <div class="social-icon--circle">
-                    <svg class="size-social-icon">
+                  <div class="social-icons-section__unit">
+                    <svg class="social-icons-section__unit__icon">
                       <use href="./images/icons.svg#icon-tweet"></use>
                     </svg>
                   </div>
 
-                  <div class="social-icon--circle">
-                    <svg class="size-social-icon">
+                  <div class="social-icons-section__unit">
+                    <svg class="social-icons-section__unit__icon">
                       <use href="./images/icons.svg#icon-face"></use>
                     </svg>
                   </div>
 
-                  <div class="social-icon--circle">
-                    <svg class="size-social-icon">
+                  <div class="social-icons-section__unit">
+                    <svg class="social-icons-section__unit__icon">
                       <use href="./images/icons.svg#icon-linke"></use>
                     </svg>
                   </div>
@@ -301,27 +307,27 @@
                     <h3>John Doe</h3>
                     <p class="our-team__person--specialization">UI Designer</p>
                   </figcaption>
-                  <div class="social-icon">
-                    <div class="social-icon--circle">
-                      <svg class="size-social-icon">
+                  <div class="social-icons-section">
+                    <div class="social-icons-section__unit">
+                      <svg class="social-icons-section__unit__icon">
                         <use href="./images/icons.svg#icon-insta"></use>
                       </svg>
                     </div>
 
-                    <div class="social-icon--circle">
-                      <svg class="size-social-icon">
+                    <div class="social-icons-section__unit">
+                      <svg class="social-icons-section__unit__icon">
                         <use href="./images/icons.svg#icon-tweet"></use>
                       </svg>
                     </div>
 
-                    <div class="social-icon--circle">
-                      <svg class="size-social-icon">
+                    <div class="social-icons-section__unit">
+                      <svg class="social-icons-section__unit__icon">
                         <use href="./images/icons.svg#icon-face"></use>
                       </svg>
                     </div>
 
-                    <div class="social-icon--circle">
-                      <svg class="size-social-icon">
+                    <div class="social-icons-section__unit">
+                      <svg class="social-icons-section__unit__icon">
                         <use href="./images/icons.svg#icon-linke"></use>
                       </svg>
                     </div>
@@ -381,28 +387,31 @@
     <!-- F O O T E R  -->
     <!--  -->
     <footer>
-      <div class="footer--background">
+      <div class="footer__container">
         <div class="container">
-          <div class="footer-flex">
+          <div class="footer__section">
             <div>
               <div>
-                <a href="index.html" class="logo logo--flex">
+                <a href="index.html" class="logo logo--position-footer">
                   <span class="logo--color">Web</span>
                   <span class="logo--color-footer">Studio</span>
                 </a>
               </div>
               <address>
                 <ul class="address">
-                  <li class="address__item address__item--color">
+                  <li class="address__item address__item--primary-color">
                     m. Warszawa, Aleje Jerozolimskie 21
                   </li>
                   <li class="address__item">
-                    <a href="mailto:nfo@devstudio.com" class="address__item--contact">
+                    <a
+                      href="mailto:nfo@devstudio.com"
+                      class="address__item--secondary-color"
+                    >
                       info@devstudio.com
                     </a>
                   </li>
                   <li class="address__item">
-                    <a href="tel:+48111111111" class="address__item--contact"
+                    <a href="tel:+48111111111" class="address__item--secondary-color"
                       >+48 111 111 111
                     </a>
                   </li>
@@ -410,30 +419,30 @@
               </address>
             </div>
 
-            <div class="join-us-margin">
+            <div class="footer__section__column">
               <div>
-                <span class="join-us">DOŁĄCZ DO NAS</span>
-                <div class="social-icon--footer">
-                  <div class="social-icon--circle--footer">
-                    <svg class="size-social-icon">
+                <span class="heading__footer">DOŁĄCZ DO NAS</span>
+                <div class="social-icon-group-footer">
+                  <div class="social-icon-group-footer--circle">
+                    <svg class="social-icons-section__unit__icon">
                       <use href="./images/icons.svg#icon-insta"></use>
                     </svg>
                   </div>
 
-                  <div class="social-icon--circle--footer">
-                    <svg class="size-social-icon">
+                  <div class="social-icon-group-footer--circle">
+                    <svg class="social-icons-section__unit__icon">
                       <use href="./images/icons.svg#icon-tweet"></use>
                     </svg>
                   </div>
 
-                  <div class="social-icon--circle--footer">
-                    <svg class="size-social-icon">
+                  <div class="social-icon-group-footer--circle">
+                    <svg class="social-icons-section__unit__icon">
                       <use href="./images/icons.svg#icon-face"></use>
                     </svg>
                   </div>
 
-                  <div class="social-icon--circle--footer">
-                    <svg class="size-social-icon">
+                  <div class="social-icon-group-footer--circle">
+                    <svg class="social-icons-section__unit__icon">
                       <use href="./images/icons.svg#icon-linke"></use>
                     </svg>
                   </div>
@@ -441,9 +450,9 @@
               </div>
             </div>
 
-            <div class="join-us-margin">
+            <div class="footer__section__column">
               <div>
-                <span class="join-us">Zapisz się do newslettera</span>
+                <span class="heading__footer">Zapisz się do newslettera</span>
                 <div>
                   <label>
                     <textarea class="footer-textarea" placeholder="E-mail"></textarea>
@@ -452,8 +461,8 @@
               </div>
             </div>
             <div>
-              <div class="button-position">
-                <button type="submit" class="button-save">Zapisz się</button>
+              <div class="button-footer">
+                <button type="submit" class="button--save">Zapisz się</button>
               </div>
             </div>
           </div>
