--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
       <!--  -->
       <!-- E F F E C T I V E  S O L U T I O N S -->
       <!--  -->
-      <div class="wallpaper">
-        <div class="image">
+      <div class="efective-solution-body">
+        <div class="efective-solution-body__image">
           <div class="container">
-            <h1 class="wallpaper__heading">
+            <h1 class="efective-solution-body__heading">
               EFEKTYWNE ROZWIĄZANIA<br />DLA WASZEGO BIZNESU
             </h1>
-            <button type="button" class="button__item" data-modal-open>
+            <button type="button" class="button__order-the-service" data-modal-open>
               Zamów usługę
             </button>
           </div>
@@ -87,58 +87,59 @@
       <!-- L O R E M  I P S U M -->
       <!--  -->
       <div class="container">
-        <ul class="article--flex section--padding-top">
-          <li class="article">
+        <ul class="four-boxes section-padding-top">
+          <li class="four-boxes__article">
             <article>
               <div>
-                <svg class="size-group">
+                <svg class="four-boxes__image">
                   <use href="./images/icons.svg#icon-group-1"></use>
                 </svg>
               </div>
-              <h3 class="article__heading">LOREM IPSUM</h3>
-              <p class="article__summary">
+              <h3 class="four-boxes__heading">LOREM IPSUM</h3>
+              <p class="four-boxes__summary">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem.
                 Sed non sodales dui. Interdum et malesuada
               </p>
             </article>
           </li>
-          <li class="article">
+
+          <li class="four-boxes__article">
             <article>
               <div>
-                <svg class="size-group">
+                <svg class="four-boxes__image">
                   <use href="./images/icons.svg#icon-group-2"></use>
                 </svg>
               </div>
-              <h3 class="article__heading">LOREM IPSUM</h3>
-              <p class="article__summary">
+              <h3 class="four-boxes__heading">LOREM IPSUM</h3>
+              <p class="four-boxes__summary">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem.
                 Sed non sodales dui. Interdum et malesuada
               </p>
             </article>
           </li>
-          <li class="article">
+          <li class="four-boxes__article">
             <article>
               <div>
-                <svg class="size-group">
+                <svg class="four-boxes__image">
                   <use href="./images/icons.svg#icon-group-3"></use>
                 </svg>
               </div>
-              <h3 class="article__heading">LOREM IPSUM</h3>
-              <p class="article__summary">
+              <h3 class="four-boxes__heading">LOREM IPSUM</h3>
+              <p class="four-boxes__summary">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem.
                 Sed non sodales dui. Interdum et malesuada
               </p>
             </article>
           </li>
-          <li class="article">
+          <li class="four-boxes__article">
             <article>
               <div>
-                <svg class="size-group">
+                <svg class="four-boxes__image">
                   <use href="./images/icons.svg#icon-group-4"></use>
                 </svg>
               </div>
-              <h3 class="article__heading">LOREM IPSUM</h3>
-              <p class="article__summary">
+              <h3 class="four-boxes__heading">LOREM IPSUM</h3>
+              <p class="four-boxes__summary">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem.
                 Sed non sodales dui. Interdum et malesuada
               </p>
@@ -152,17 +153,17 @@
 
       <section>
         <div class="container">
-          <h2 class="heading section--padding-top">Czym się zajmujemy</h2>
-          <ul class="images-flex section--padding-bottom">
-            <li class="heading__image">
+          <h2 class="solution section-padding-top">Czym się zajmujemy</h2>
+          <ul class="images-space-between section-padding-bottom">
+            <li class="solution__image">
               <img src="./images/img2.jpg" width="370" height="294" alt="computer" />
               <figcaption class="what-we-do">Aplikacje komputerowe</figcaption>
             </li>
-            <li class="heading__image heading__image--padding">
+            <li class="solution__image">
               <img src="./images/img1.jpg" width="370" height="294" alt="phone" />
               <figcaption class="what-we-do">Aplikacje mobilne</figcaption>
             </li>
-            <li class="heading__image">
+            <li class="solution__image">
               <img src="./images/img3.jpg" width="370" height="294" alt="tablet" />
               <figcaption class="what-we-do">Rozwiązania graficzne</figcaption>
             </li>
@@ -173,10 +174,10 @@
       <!-- O U R  T E A M -->
       <!--  -->
       <section>
-        <div class="out-team--background section--padding-bottom">
+        <div class="out-team--background section-padding-bottom">
           <div class="container">
-            <h2 class="our-team section--padding-top">Nasz zespół</h2>
-            <ul class="our-team__person images-flex">
+            <h2 class="our-team section-padding-top">Nasz zespół</h2>
+            <ul class="our-team__person images-space-between">
               <li class="our-team__border">
                 <figure>
                   <img
@@ -340,7 +341,7 @@
       </section>
       <section>
         <div class="container">
-          <h2 class="our-team section--padding-top">Nasi klienci</h2>
+          <h2 class="our-team section-padding-top">Nasi klienci</h2>
         </div>
         <div class="container">
           <div class="our-clients">
