--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <!-- O U R  T E A M -->
       <!--  -->
       <section>
-        <div class="out-team--background section-padding-bottom">
+        <div class="out-team-background section-padding-bottom">
           <div class="container">
             <h2 class="our-team section-padding-top">Nasz zespół</h2>
             <ul class="our-team__person images-space-between">
