--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="header__menu">
           <a href="index.html" class="logo"><span class="logo--color">Web</span>Studio</a>
 
-          <nav class="header__menu">
+          <nav>
             <ul class="header__menu__container">
               <li>
                 <a
@@ -37,7 +37,7 @@
           </nav>
         </div>
 
-        <nav class="header__menu">
+        <nav>
           <ul class="header__menu__container header__menu__container--gap">
             <li>
               <a
@@ -463,7 +463,7 @@
             </div>
             <div>
               <div class="button-footer">
-                <button type="submit" class="button--save">Zapisz się</button>
+                <button type="submit" class="button-footer--save">Zapisz się</button>
               </div>
             </div>
           </div>
