--- a/index.html
+++ b/index.html
@@ -18,16 +18,14 @@
     <!-- H E A D E R -->
     <!--  -->
     <header class="header">
-      <div class="header__container container">
+      <div class="header__container">
         <div class="header__menu">
           <a href="index.html" class="logo"><span class="logo--color">Web</span>Studio</a>
 
-          <nav>
+          <nav class="navbar__container">
             <ul class="header__menu__container">
               <li>
-                <a
-                  href="index.html"
-                  class="header__menu__item header__menu__item--active header__menu__item--blue-bottom-agency"
+                <a href="index.html" class="header__menu__item header__menu__item--active"
                   >Agencja
                 </a>
               </li>
@@ -38,7 +36,7 @@
         </div>
 
         <nav>
-          <ul class="header__menu__container header__menu__container--gap">
+          <ul class="navbar__contact">
             <li>
               <a
                 href="mailto:info@devstudio.com"
@@ -53,7 +51,7 @@
             <li>
               <a
                 href="tel:+48111111111"
-                class="header__menu__contact header__menu__contact--color header__menu__contact--padding"
+                class="header__menu__contact header__menu__contact--color"
               >
                 <svg class="header__menu__contact__icon-phone">
                   <use href="./images/icons.svg#icon-smartphone"></use>
@@ -86,67 +84,69 @@
       <!--  -->
       <!-- L O R E M  I P S U M -->
       <!--  -->
-      <div class="container">
-        <ul class="four-boxes section-padding-top">
-          <li class="four-boxes__article">
-            <article>
-              <div>
-                <svg class="four-boxes__image">
-                  <use href="./images/icons.svg#icon-group-1"></use>
-                </svg>
-              </div>
-              <h3 class="four-boxes__heading">LOREM IPSUM</h3>
-              <p class="four-boxes__summary">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem.
-                Sed non sodales dui. Interdum et malesuada
-              </p>
-            </article>
-          </li>
+      <section class="article">
+        <div class="article__container">
+          <ul class="four-boxes section-padding-top">
+            <li class="four-boxes__article">
+              <article>
+                <div>
+                  <svg class="four-boxes__image">
+                    <use href="./images/icons.svg#icon-group-1"></use>
+                  </svg>
+                </div>
+                <h3 class="four-boxes__heading">LOREM IPSUM</h3>
+                <p class="four-boxes__summary">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu
+                  sem. Sed non sodales dui. Interdum et malesuada
+                </p>
+              </article>
+            </li>
 
-          <li class="four-boxes__article">
-            <article>
-              <div>
-                <svg class="four-boxes__image">
-                  <use href="./images/icons.svg#icon-group-2"></use>
-                </svg>
-              </div>
-              <h3 class="four-boxes__heading">LOREM IPSUM</h3>
-              <p class="four-boxes__summary">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem.
-                Sed non sodales dui. Interdum et malesuada
-              </p>
-            </article>
-          </li>
-          <li class="four-boxes__article">
-            <article>
-              <div>
-                <svg class="four-boxes__image">
-                  <use href="./images/icons.svg#icon-group-3"></use>
-                </svg>
-              </div>
-              <h3 class="four-boxes__heading">LOREM IPSUM</h3>
-              <p class="four-boxes__summary">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem.
-                Sed non sodales dui. Interdum et malesuada
-              </p>
-            </article>
-          </li>
-          <li class="four-boxes__article">
-            <article>
-              <div>
-                <svg class="four-boxes__image">
-                  <use href="./images/icons.svg#icon-group-4"></use>
-                </svg>
-              </div>
-              <h3 class="four-boxes__heading">LOREM IPSUM</h3>
-              <p class="four-boxes__summary">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem.
-                Sed non sodales dui. Interdum et malesuada
-              </p>
-            </article>
-          </li>
-        </ul>
-      </div>
+            <li class="four-boxes__article">
+              <article>
+                <div>
+                  <svg class="four-boxes__image">
+                    <use href="./images/icons.svg#icon-group-2"></use>
+                  </svg>
+                </div>
+                <h3 class="four-boxes__heading">LOREM IPSUM</h3>
+                <p class="four-boxes__summary">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu
+                  sem. Sed non sodales dui. Interdum et malesuada
+                </p>
+              </article>
+            </li>
+            <li class="four-boxes__article">
+              <article>
+                <div>
+                  <svg class="four-boxes__image">
+                    <use href="./images/icons.svg#icon-group-3"></use>
+                  </svg>
+                </div>
+                <h3 class="four-boxes__heading">LOREM IPSUM</h3>
+                <p class="four-boxes__summary">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu
+                  sem. Sed non sodales dui. Interdum et malesuada
+                </p>
+              </article>
+            </li>
+            <li class="four-boxes__article">
+              <article>
+                <div>
+                  <svg class="four-boxes__image">
+                    <use href="./images/icons.svg#icon-group-4"></use>
+                  </svg>
+                </div>
+                <h3 class="four-boxes__heading">LOREM IPSUM</h3>
+                <p class="four-boxes__summary">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu
+                  sem. Sed non sodales dui. Interdum et malesuada
+                </p>
+              </article>
+            </li>
+          </ul>
+        </div>
+      </section>
       <!--  -->
       <!-- W H A T  W E  D O -->
       <!--  -->
